--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -249,7 +249,13 @@ footer {
 
 @media print {
   body {
-    padding:0.4in;
+    width:100%;
+    height:50px;
+    display:block;
+    position:absolute;
+    top:0;
+    left:0;
+    padding:0.2in;
     font-size:12pt;
     color:#444;
   }
