--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -249,8 +249,33 @@ footer {
 
 @media print {
   body {
-    padding:0.2in;
+    padding:0.4in;
     font-size:12pt;
     color:#444;
   }
+}
+
+ul#list-nav {
+  width:100%;
+    height:50px;
+    display:block;
+    position:absolute;
+    top:0;
+    left:0;
+  list-style:none;
+  margin:20px;
+  padding:0;
+}
+ul#list-nav li {
+  display:inline
+}
+ul#list-nav li a {
+  text-decoration:none;
+  padding:5px 0;
+  width:100px;
+  float:left;
+  text-align:center;
+}
+
+ul#list-nav li a:hover {
 }
