--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -259,9 +259,9 @@ ul#list-nav {
   width:100%;
     height:50px;
     display:block;
-    position:absolute;
+    position:fixed;
     top:0;
-    left:0;
+    left:30%;
   list-style:none;
   margin:20px;
   padding:0;
