--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -260,11 +260,12 @@ ul#list-nav {
     height:50px;
     display:block;
     position:fixed;
-    top:0;
-    left:30%;
+    top:20px;
+    left:40%;
   list-style:none;
   margin:20px;
   padding:0;
+  background-color:#330000;
 }
 ul#list-nav li {
   display:inline
