--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -261,11 +261,11 @@ ul#list-nav {
     display:block;
     position:fixed;
     top:20px;
-    left:40%;
+    left:37%;
   list-style:none;
   margin:20px;
   padding:0;
-  background-color:#330000;
+  background-color:#FFF;
 }
 ul#list-nav li {
   display:inline
