--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -260,7 +260,7 @@ ul#list-nav {
     height:50px;
     display:block;
     position:fixed;
-    top:20px;
+    top:0;
     left:37%;
   list-style:none;
   margin:20px;
